Fixes in menu style and button visibility

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,183 +1,212 @@
 .layout {
+  --sidebar-width: 225px;
+  --sidebar-width-collapsed: 60px;
+
   display: flex;
   height: 100vh;
   background-color: var(--background-color-light);
-}
-
-.sidebar {
-  color: var(--p-primary-600);
-  height: 100vh;
-  position: relative;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  overflow-x: hidden;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  background-color: var(--background-color-light);
-  border-right: 1px solid var(--background-color-light);
-  transition: transform 0.3s ease-in-out;
-  width: 250px;
-
-  .toggle-btn {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    z-index: 1100;
-  }
-
-  .sidebar-header {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 0.5rem 1rem;
+  .sidebar {
+    color: var(--p-primary-600);
+    height: 100vh;
     position: relative;
-  }
-
-  .sidebar-logo {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.5rem;
-    font-weight: bold;
-    text-align: center;
-  }
-
-  .sidebar-menu {
-    padding: 1rem 0;
-
-    ul {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
-  }
-
-  .sidebar-menu-item {
-    position: relative;
-  }
-
-  .sidebar-item {
-    display: flex;
-    align-items: center;
-    color: #ecf0f1;
-    text-decoration: none;
-    padding: 0.75rem 1rem;
-    transition: all 0.2s ease;
-    cursor: pointer;
-
-    &:hover {
-      color: var(--p-primary-500);
-    }
-
-    &.menu-item-active {
-      color: var(--p-primary-500);
-    }
-
-    i {
-      margin-right: 0.75rem;
-
-      &.sidebar-item-arrow {
-        margin-left: auto;
-        font-size: 0.8rem;
-        transition: transform 0.3s ease;
-
-        &.rotated {
-          transform: rotate(180deg);
-        }
-      }
-    }
-
-    &-text {
-      opacity: 1;
-      transition: opacity 0.3s ease-in-out;
-    }
-
-    &.has-children {
-      position: relative;
-    }
-  }
-
-  .sidebar-submenu {
-    background-color: rgba(0, 0, 0, 0.1);
-
-    .sidebar-item {
-      padding-left: 3rem;
-      font-size: 0.9rem;
-    }
-  }
-
-  &.sidebar-collapsed {
-    width: 60px;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    overflow-x: hidden;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    background-color: var(--background-color-light);
+    border-right: 1px solid var(--background-color-light);
+    transition: all 0.5s ease-in-out;
+    width: var(--sidebar-width);
 
     .sidebar-header {
-      padding: 0;
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      padding: 0.5rem 1rem;
+      position: relative;
+      height: 50px;
+    }
+
+    .sidebar-logo {
+      color: #fff;
+      text-decoration: none;
+      font-size: 1.5rem;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .sidebar-menu {
+      padding: 1rem 0;
+
+      ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+      }
     }
 
     .sidebar-menu-item {
-      position: static;
-      display: flex;
-      justify-content: center;
+      position: relative;
     }
 
     .sidebar-item {
-      i {
-        margin-right: 0;
+      display: flex;
+      align-items: center;
+      color: #ecf0f1;
+      text-decoration: none;
+      padding: 0.75rem 1rem;
+      transition: all 0.2s ease;
+      cursor: pointer;
+
+      &:hover {
+        color: var(--p-primary-500);
       }
-      &-text,
-      &-arrow {
-        opacity: 0;
-        width: 0;
-        overflow: hidden;
+
+      &.menu-item-active {
+        color: var(--p-primary-500);
+      }
+
+      i {
+        margin-right: 0.75rem;
+
+        &.sidebar-item-arrow {
+          margin-left: auto;
+          font-size: 0.8rem;
+          transition: transform 0.3s ease;
+
+          &.rotated {
+            transform: rotate(180deg);
+          }
+        }
+      }
+
+      &-text {
+        display: inline-block;
+        transition: transform 0.3s ease-in-out;
+      }
+
+      &.has-children {
+        position: relative;
       }
     }
 
     .sidebar-submenu {
-      display: none;
+      background-color: rgba(0, 0, 0, 0.1);
+
+      .sidebar-item {
+        padding-left: 3rem;
+        font-size: 0.9rem;
+      }
+    }
+  }
+
+  .toggle-btn {
+    position: absolute;
+    bottom: 10px;
+    left: calc(var(--sidebar-width) - 50px);
+    z-index: 1100;
+  }
+
+  &.sidebar-collapsed {
+    .sidebar {
+      width: var(--sidebar-width-collapsed);
+
+      .sidebar-header {
+        padding: 0;
+      }
+
+      .sidebar-menu-item {
+        position: static;
+        display: flex;
+        justify-content: center;
+      }
+
+      .sidebar-item {
+        i {
+          margin-right: 0;
+        }
+        &-text,
+        &-arrow {
+          display: none;
+          width: 0;
+          overflow: hidden;
+        }
+      }
+
+      .sidebar-submenu {
+        display: none;
+      }
+    }
+
+    .toggle-btn {
+      position: absolute;
+      bottom: 10px;
+      left: calc(var(--sidebar-width-collapsed) + 4px);
+      z-index: 1100;
+    }
+  }
+
+  .not-menu-container {
+    width: calc(100% - var(--sidebar-width));
+    transition: transform 0.5s ease-in-out;
+    flex-grow: 1;
+
+    /* Create a top navigation bar with a black background color  */
+    .topnav {
+      background-color: var(--background-color-light);
+      overflow: hidden;
+      height: var(--navbar-height);
+
+      /* Style the links inside the navigation bar */
+      a {
+        float: left;
+        color: var(--p-primary-500);
+        text-align: center;
+        padding: 10px 10px;
+        text-decoration: none;
+        font-size: 17px;
+      }
+
+      /* Change the color of links on hover */
+      a:hover {
+        background-color: var(--p-primary-600);
+        color: var(--background-color);
+      }
+
+      /* Create a right-aligned (split) link inside the navigation bar */
+      a.right {
+        float: right;
+      }
+    }
+
+    .content {
+      height: calc(100vh - var(--navbar-height));
+      padding: 2px;
+      background-color: var(--background-color);
+      overflow-y: auto;
+      padding: 10px;
+    }
+
+    .new-email-btn {
+      position: fixed;
+      right: 40px;
+      bottom: 25px;
+    }
+  }
+
+  &.sidebar-collapsed {
+    .not-menu-container {
+      width: calc(100% - var(--sidebar-width-collapsed));
+      transition: transform 0.5s ease-in-out;
     }
   }
 }
 
-.not-menu-container {
-  width: 100%;
-
-  /* Create a top navigation bar with a black background color  */
-  .topnav {
-    background-color: var(--background-color-light);
-    overflow: hidden;
-    height: var(--navbar-height);
-
-    /* Style the links inside the navigation bar */
-    a {
-      float: left;
-      color: var(--p-primary-500);
-      text-align: center;
-      padding: 10px 10px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-
-    /* Change the color of links on hover */
-    a:hover {
-      background-color: var(--p-primary-600);
-      color: var(--background-color);
-    }
-
-    /* Create a right-aligned (split) link inside the navigation bar */
-    a.right {
-      float: right;
-    }
-  }
-
-  .content {
-    height: calc(100vh - var(--navbar-height));
-    padding: 2px;
-    background-color: var(--background-color);
-    overflow-y: auto;
-    padding: 10px;
-  }
-
-  .new-email-btn {
-    position: fixed;
-    right: 40px;
-    bottom: 25px;
+::ng-deep {
+  #btn-toggle-id > button {
+    padding: 0.375rem !important;
+    padding-inline: 0.375 !important;
+    width: 28px;
   }
 }
